@@ -1,4 +1,4 @@
-# $NetBSD: mi,v 1.778 2008/10/29 11:29:39 kleink Exp $
+# $NetBSD: mi,v 1.779 2008/10/30 00:27:31 joerg Exp $
 #
 # Note:	Don't delete entries from here - mark them as "obsolete" instead,
 #	unless otherwise stated below.
@@ -120,6 +120,24 @@
 ./lib/libssp.so					base-obsolete		obsolete
 ./libdata					base-sys-root
 ./libdata/firmware				base-sys-root
+./libdata/firmware/if_ipw			base-sys-root
+./libdata/firmware/if_ipw/LICENSE		base-sys-root
+./libdata/firmware/if_ipw/ipw2100-1.2-i.fw	base-sys-root
+./libdata/firmware/if_ipw/ipw2100-1.2-p.fw	base-sys-root
+./libdata/firmware/if_ipw/ipw2100-1.2.fw	base-sys-root
+./libdata/firmware/if_iwi			base-sys-root
+./libdata/firmware/if_iwi/LICENSE.ipw2200-fw	base-sys-root
+./libdata/firmware/if_iwi/ipw2200-bss.fw	base-sys-root
+./libdata/firmware/if_iwi/ipw2200-ibss.fw	base-sys-root
+./libdata/firmware/if_iwi/ipw2200-sniffer.fw	base-sys-root
+./libdata/firmware/if_iwn			base-sys-root
+./libdata/firmware/if_iwn/LICENSE.iwlwifi-4965-ucode	base-sys-root
+./libdata/firmware/if_iwn/README.iwlwifi-4965-ucode	base-sys-root
+./libdata/firmware/if_iwn/iwlwifi-4965-1.ucode	base-sys-root
+./libdata/firmware/if_wpi			base-sys-root
+./libdata/firmware/if_wpi/LICENSE.ipw3945-ucode	base-sys-root
+./libdata/firmware/if_wpi/README.ipw3945-ucode	base-sys-root
+./libdata/firmware/if_wpi/ipw3945.ucode		base-sys-root
 ./libdata/firmware/ral				base-sys-root
 ./libdata/firmware/ral/ral-license		base-sys-root
 ./libdata/firmware/ral/ral-rt2561		base-sys-root
